# doriot

./: .env.example  README.md  pyproject.toml
.github/workflows/: newsletter.yml
brainsync/: graph.py  prompts.py  state.py
brainsync/agents/: delivery.py  formatter.py  synthesizer.py  thesis_writer.py
brainsync/agents/researchers/: github.py  hn.py  reddit.py  techcrunch.py
brainsync/templates/: newsletter.html.j2
docs/superpowers/plans/: 2026-04-05-brainsync.md
docs/superpowers/specs/: 2026-04-05-brainsync-design.md
examples/: sample-newsletter.html
scripts/: generate_sample.py
tests/: test_delivery.py  test_formatter.py  test_github.py  test_graph.py  test_hn.py  test_reddit.py  test_state.py  test_synthesizer.py  test_techcrunch.py  test_thesis_writer.py
tests/fixtures/: github_repos.json  hn_items.json  reddit_posts.json  techcrunch_feed.xml
