[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainsync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "anthropic>=0.40",
    "praw>=7.7",
    "feedparser>=6.0",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
